Fix: OPEX-348 align message no data (#259)

--- a/src/containers/Markets/Markets.pcss
+++ b/src/containers/Markets/Markets.pcss
@@ -56,6 +56,11 @@
     td {
       cursor: pointer;
     }
+    &__head {
+      th:last-child {
+        width: calc(var(--big-gap) * 1.3);
+      }
+    }
     &__row {
       &--selected {
         td {
