--- a/src/index.pcss
+++ b/src/index.pcss
@@ -309,6 +309,9 @@ body, html {
     th {
       font-size: 1em !important;
     }
+    th:last-child {
+      width: calc(var(--big-gap) * 0.7);
+    }
   }
 
   &__body {
